login and user manage frontend